--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "daisyui": "^5.5.5",
     "framer-motion": "^12.23.24",
     "lottie-web": "^5.13.0",
     "react": "^19.2.0",
