--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
+    "react-modern-drawer": "^1.4.0",
     "react-router-dom": "^7.9.6",
     "react-type-animation": "^3.2.0"
   },
