--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,16 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "daisyui": "^5.5.5",
     "framer-motion": "^12.23.24",
     "lottie-web": "^5.13.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.0",
     "react-lottie": "^1.2.10",
     "react-modern-drawer": "^1.4.0",
     "react-router-dom": "^7.9.6",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
