--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -18,9 +18,11 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-lottie": "^1.2.10",
     "react-modern-drawer": "^1.4.0",
     "react-router-dom": "^7.9.6",
+    "react-slick": "^0.31.0",
     "react-type-animation": "^3.2.0",
     "sweetalert2": "^11.26.3"
   },
