--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.9.6",
     "react-slick": "^0.31.0",
     "react-type-animation": "^3.2.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
